@@ -20,6 +20,7 @@
 #include <errno.h>
 #include <time.h>
 #include <pthread.h>
+#include <support/check.h>
 
 static int
 do_test (void)
@@ -29,33 +30,23 @@ do_test (void)
   pthread_mutexattr_t mutexattr;
   int ret = 0;
 
-  if (pthread_mutexattr_init (&mutexattr) != 0)
-    return 1;
-  if (pthread_mutexattr_settype (&mutexattr, PTHREAD_MUTEX_ERRORCHECK) != 0)
-    return 1;
+  TEST_COMPARE (pthread_mutexattr_init (&mutexattr), 0);
+  TEST_COMPARE (pthread_mutexattr_settype (&mutexattr,
+                                           PTHREAD_MUTEX_ERRORCHECK), 0);
 
-  if (pthread_mutex_init (&mutex, &mutexattr) != 0)
-    return 1;
-  if (pthread_mutexattr_destroy (&mutexattr) != 0)
-    return 1;
+  TEST_COMPARE (pthread_mutex_init (&mutex, &mutexattr), 0);
+  TEST_COMPARE (pthread_mutexattr_destroy (&mutexattr), 0);
 
   /* The call to pthread_mutex_timedlock erroneously enabled lock elision
      on the mutex, which then triggered an assertion failure in
      pthread_mutex_unlock.  It would also defeat the error checking nature
      of the mutex.  */
-  if (pthread_mutex_timedlock (&mutex, &tms) != 0)
-    return 1;
-  if (pthread_mutex_timedlock (&mutex, &tms) != EDEADLK)
-    {
-      printf ("Failed error checking on locked mutex\n");
-      ret = 1;
-    }
+  TEST_COMPARE (pthread_mutex_timedlock (&mutex, &tms), 0);
+  TEST_COMPARE (pthread_mutex_timedlock (&mutex, &tms), EDEADLK);
 
-  if (pthread_mutex_unlock (&mutex) != 0)
-    ret = 1;
+  TEST_COMPARE (pthread_mutex_unlock (&mutex), 0);
 
   return ret;
 }
 
-#define TEST_FUNCTION do_test ()
-#include "../test-skeleton.c"
+#include <support/test-driver.c>
